3rdyear/Compiladores/comp2023-tablan-03-master/src/.antlr/ATableGrammarParser.java
// Generated from /home/joao/Desktop/ECI-Ano-3/C/Projeto/comp2023-tablan-03/src/ATableGrammar.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ATableGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, ID=37, INTEGER_LITERAL=38, 
		REAL_LITERAL=39, STRING_LITERAL=40, WHITESPACE=41, COMMENT=42;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_tableDefinition = 2, RULE_formulaDefinition = 3, 
		RULE_tableColumnDefinition = 4, RULE_dataType = 5, RULE_assignment = 6, 
		RULE_printStatement = 7, RULE_expressionList = 8, RULE_addRowStatement = 9, 
		RULE_tableRef = 10, RULE_headerStatement = 11, RULE_loopStatement = 12, 
		RULE_centerExpression = 13, RULE_expression = 14, RULE_primary = 15, RULE_fieldAccess = 16, 
		RULE_readStatement = 17, RULE_usingClause = 18, RULE_columnMapping = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "tableDefinition", "formulaDefinition", "tableColumnDefinition", 
			"dataType", "assignment", "printStatement", "expressionList", "addRowStatement", 
			"tableRef", "headerStatement", "loopStatement", "centerExpression", "expression", 
			"primary", "fieldAccess", "readStatement", "usingClause", "columnMapping"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'type'", "'table'", "'->'", "'{'", "'}'", "';'", "':'", "':='", 
			"'integer'", "'real'", "'text'", "'println'", "'print'", "','", "'['", 
			"']'", "'[]'", "'>>'", "'new'", "'('", "')'", "'.'", "'for'", "'in'", 
			"'do'", "'end;'", "'center'", "'*'", "'/'", "'+'", "'-'", "'read'", "'length'", 
			"'using'", "'column'", "'as'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "ID", "INTEGER_LITERAL", "REAL_LITERAL", "STRING_LITERAL", "WHITESPACE", 
			"COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ATableGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ATableGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ATableGrammarParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__16) | (1L << T__18) | (1L << T__22) | (1L << ID))) != 0)) {
				{
				{
				setState(40);
				statement();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StatementTableDefinitionContext extends StatementContext {
		public TableDefinitionContext tableDefinition() {
			return getRuleContext(TableDefinitionContext.class,0);
		}
		public StatementTableDefinitionContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class StatementHeaderContext extends StatementContext {
		public HeaderStatementContext headerStatement() {
			return getRuleContext(HeaderStatementContext.class,0);
		}
		public StatementHeaderContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class StatementPrintContext extends StatementContext {
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public StatementPrintContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class StatementLoopContext extends StatementContext {
		public LoopStatementContext loopStatement() {
			return getRuleContext(LoopStatementContext.class,0);
		}
		public StatementLoopContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class StatementAddRowContext extends StatementContext {
		public AddRowStatementContext addRowStatement() {
			return getRuleContext(AddRowStatementContext.class,0);
		}
		public StatementAddRowContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class StatementAssignmentContext extends StatementContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public StatementAssignmentContext(StatementContext ctx) { copyFrom(ctx); }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(54);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new StatementTableDefinitionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				tableDefinition();
				}
				break;
			case 2:
				_localctx = new StatementAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				assignment();
				}
				break;
			case 3:
				_localctx = new StatementPrintContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(50);
				printStatement();
				}
				break;
			case 4:
				_localctx = new StatementAddRowContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(51);
				addRowStatement();
				}
				break;
			case 5:
				_localctx = new StatementHeaderContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(52);
				headerStatement();
				}
				break;
			case 6:
				_localctx = new StatementLoopContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(53);
				loopStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableDefinitionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ATableGrammarParser.ID, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(ATableGrammarParser.STRING_LITERAL, 0); }
		public List<TableColumnDefinitionContext> tableColumnDefinition() {
			return getRuleContexts(TableColumnDefinitionContext.class);
		}
		public TableColumnDefinitionContext tableColumnDefinition(int i) {
			return getRuleContext(TableColumnDefinitionContext.class,i);
		}
		public List<FormulaDefinitionContext> formulaDefinition() {
			return getRuleContexts(FormulaDefinitionContext.class);
		}
		public FormulaDefinitionContext formulaDefinition(int i) {
			return getRuleContext(FormulaDefinitionContext.class,i);
		}
		public TableDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableDefinition; }
	}

	public final TableDefinitionContext tableDefinition() throws RecognitionException {
		TableDefinitionContext _localctx = new TableDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tableDefinition);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(T__0);
			setState(57);
			match(T__1);
			setState(58);
			match(ID);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(59);
				match(T__2);
				setState(60);
				match(STRING_LITERAL);
				}
			}

			setState(63);
			match(T__3);
			setState(65); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(64);
					tableColumnDefinition();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(67); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(69);
					formulaDefinition();
					}
					}
					setState(72); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID );
				}
			}

			setState(76);
			match(T__4);
			setState(77);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulaDefinitionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ATableGrammarParser.ID, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FormulaDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formulaDefinition; }
	}

	public final FormulaDefinitionContext formulaDefinition() throws RecognitionException {
		FormulaDefinitionContext _localctx = new FormulaDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_formulaDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(ID);
			setState(80);
			match(T__6);
			setState(81);
			dataType();
			setState(82);
			match(T__7);
			setState(83);
			expression();
			setState(84);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableColumnDefinitionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ATableGrammarParser.ID, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(ATableGrammarParser.STRING_LITERAL, 0); }
		public TableColumnDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableColumnDefinition; }
	}

	public final TableColumnDefinitionContext tableColumnDefinition() throws RecognitionException {
		TableColumnDefinitionContext _localctx = new TableColumnDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tableColumnDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(ID);
			setState(87);
			match(T__6);
			setState(88);
			dataType();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(89);
				match(T__2);
				setState(90);
				match(STRING_LITERAL);
				}
			}

			setState(93);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataTypeContext extends ParserRuleContext {
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
	 
		public DataTypeContext() { }
		public void copyFrom(DataTypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DataTypeRealContext extends DataTypeContext {
		public DataTypeRealContext(DataTypeContext ctx) { copyFrom(ctx); }
	}
	public static class DataTypeTextContext extends DataTypeContext {
		public DataTypeTextContext(DataTypeContext ctx) { copyFrom(ctx); }
	}
	public static class DataTypeIntegerContext extends DataTypeContext {
		public DataTypeIntegerContext(DataTypeContext ctx) { copyFrom(ctx); }
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dataType);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				_localctx = new DataTypeIntegerContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(T__8);
				}
				break;
			case T__9:
				_localctx = new DataTypeRealContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				match(T__9);
				}
				break;
			case T__10:
				_localctx = new DataTypeTextContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				match(T__10);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FieldAccessAssignmentContext extends AssignmentContext {
		public FieldAccessContext fieldAccess() {
			return getRuleContext(FieldAccessContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FieldAccessAssignmentContext(AssignmentContext ctx) { copyFrom(ctx); }
	}
	public static class IdentifierAssignmentContext extends AssignmentContext {
		public TerminalNode ID() { return getToken(ATableGrammarParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ReadStatementContext readStatement() {
			return getRuleContext(ReadStatementContext.class,0);
		}
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TableRefContext tableRef() {
			return getRuleContext(TableRefContext.class,0);
		}
		public IdentifierAssignmentContext(AssignmentContext ctx) { copyFrom(ctx); }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignment);
		int _la;
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new FieldAccessAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				fieldAccess();
				setState(101);
				match(T__7);
				setState(102);
				expression();
				setState(103);
				match(T__5);
				}
				break;
			case 2:
				_localctx = new IdentifierAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				match(ID);
				setState(120);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(106);
					match(T__7);
					setState(107);
					expression();
					}
					break;
				case 2:
					{
					setState(108);
					match(T__7);
					setState(109);
					readStatement();
					}
					break;
				case 3:
					{
					setState(110);
					match(T__6);
					setState(111);
					dataType();
					setState(114);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__7) {
						{
						setState(112);
						match(T__7);
						setState(113);
						expression();
						}
					}

					}
					break;
				case 4:
					{
					setState(116);
					match(T__6);
					setState(117);
					tableRef();
					}
					break;
				case 5:
					{
					setState(118);
					match(T__7);
					setState(119);
					tableRef();
					}
					break;
				}
				setState(122);
				match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintStatementContext extends ParserRuleContext {
		public ExpressionListContext expressionList() {
			return getRuleContext(ExpressionListContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(ATableGrammarParser.STRING_LITERAL, 0); }
		public CenterExpressionContext centerExpression() {
			return getRuleContext(CenterExpressionContext.class,0);
		}
		public PrintStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStatement; }
	}

	public final PrintStatementContext printStatement() throws RecognitionException {
		PrintStatementContext _localctx = new PrintStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_printStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_la = _input.LA(1);
			if ( !(_la==T__11 || _la==T__12) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(127);
				expressionList();
				}
				break;
			case 2:
				{
				setState(128);
				match(STRING_LITERAL);
				}
				break;
			case 3:
				{
				setState(129);
				centerExpression();
				}
				break;
			}
			setState(132);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionListContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ExpressionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionList; }
	}

	public final ExpressionListContext expressionList() throws RecognitionException {
		ExpressionListContext _localctx = new ExpressionListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expressionList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			expression();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(135);
				match(T__13);
				setState(136);
				expression();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddRowStatementContext extends ParserRuleContext {
		public TableRefContext tableRef() {
			return getRuleContext(TableRefContext.class,0);
		}
		public TerminalNode ID() { return getToken(ATableGrammarParser.ID, 0); }
		public ExpressionListContext expressionList() {
			return getRuleContext(ExpressionListContext.class,0);
		}
		public AddRowStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addRowStatement; }
	}

	public final AddRowStatementContext addRowStatement() throws RecognitionException {
		AddRowStatementContext _localctx = new AddRowStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_addRowStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(142);
				match(ID);
				}
				break;
			case T__14:
				{
				setState(143);
				match(T__14);
				setState(144);
				expressionList();
				setState(145);
				match(T__15);
				}
				break;
			case T__16:
				{
				setState(147);
				match(T__16);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(150);
			match(T__17);
			setState(151);
			tableRef();
			setState(152);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableRefContext extends ParserRuleContext {
		public TableRefContext tableRef() {
			return getRuleContext(TableRefContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(ATableGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ATableGrammarParser.ID, i);
		}
		public TableRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableRef; }
	}

	public final TableRefContext tableRef() throws RecognitionException {
		TableRefContext _localctx = new TableRefContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tableRef);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__18:
				{
				setState(154);
				match(T__18);
				setState(155);
				match(T__19);
				setState(156);
				tableRef();
				setState(157);
				match(T__20);
				}
				break;
			case ID:
				{
				setState(159);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(166);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(162);
					match(T__21);
					setState(163);
					match(ID);
					}
					} 
				}
				setState(168);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderStatementContext extends ParserRuleContext {
		public TableRefContext tableRef() {
			return getRuleContext(TableRefContext.class,0);
		}
		public TerminalNode ID() { return getToken(ATableGrammarParser.ID, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(ATableGrammarParser.STRING_LITERAL, 0); }
		public HeaderStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headerStatement; }
	}

	public final HeaderStatementContext headerStatement() throws RecognitionException {
		HeaderStatementContext _localctx = new HeaderStatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_headerStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			tableRef();
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__21) {
				{
				setState(170);
				match(T__21);
				setState(171);
				match(ID);
				}
			}

			setState(174);
			match(T__2);
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING_LITERAL) {
				{
				setState(175);
				match(STRING_LITERAL);
				}
			}

			setState(178);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopStatementContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ATableGrammarParser.ID, 0); }
		public TableRefContext tableRef() {
			return getRuleContext(TableRefContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public LoopStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopStatement; }
	}

	public final LoopStatementContext loopStatement() throws RecognitionException {
		LoopStatementContext _localctx = new LoopStatementContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_loopStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(T__22);
			setState(181);
			match(ID);
			setState(182);
			match(T__23);
			setState(183);
			tableRef();
			setState(184);
			match(T__24);
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__16) | (1L << T__18) | (1L << T__22) | (1L << ID))) != 0)) {
				{
				{
				setState(185);
				statement();
				}
				}
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(191);
			match(T__25);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CenterExpressionContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public CenterExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_centerExpression; }
	}

	public final CenterExpressionContext centerExpression() throws RecognitionException {
		CenterExpressionContext _localctx = new CenterExpressionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_centerExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			expression();
			setState(194);
			match(T__26);
			setState(195);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
